Incrementa endpoint POST e adiciona checklist de desenvolvimento para o movimentacao-service